--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     ar-preferred ar-placement="floor" camera-controls camera-orbit="0deg 90deg 100%" loading="lazy"
                     slot="ar-button" poster="images/Video Poster_2.png" alt="Sugarlump Demo"
                     style="width: 100%; height: 200px; position: absolute; top: 0; left: 0; z-index: 1;"
-                    ios-src="Models/GIRL_converted.usdz" interaction-prompt="none">
+                    ios-src="Models/30_FINAL_IOS_8000_SWEET_STREET.usdz" interaction-prompt="none">
                 </model-viewer>
             </div>
 
